swaggerパス修正
