# swagger.yaml
@@ -45,7 +45,7 @@ paths:
         400:
           description: "Bad Request"
 
-  /post/{id}:
+  /posts/{id}:
     get:
       tags:
         - post
@@ -110,7 +110,7 @@ paths:
         500:
           description: "Internal Server Error"
 
-  /posts/imageUpload/{id}:
+  /imageUpload/{id}:
     post:
       tags:
         - post
